lib/params.js: merging in the rest of the RFC5054-A parameter sets

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   ],
   "author": "gdkar",
   "license": "BSD",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "sjcl-full": "~1.0.0"
   }
 }
